...
    
    func lastViewReached(result: Bool) {
        self.lastViewReached = result
        
        var newTitle = "Next"
        if result == true {
            newTitle = "Start"
        }
        
        guard newTitle != nextButton.currentTitle else {
            return
        }
        
...
